--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                             <div>
                                 <h1 id=text66 style=opacity:1;transform:none>Yash Pratap Singh</h1>
                                 <p id=text14 style=opacity:1;transform:none>Learner, developer, enthusiast
-                                <p id=text67 style=opacity:1;transform:none>Chief Product Officer @ FastCut | Pursuing B.E. from BITS Goa, proficient in
+                                <p id=text67 style=opacity:1;transform:none>ex-Chief Product Officer @ FastCut | Pursuing B.E. from BITS Goa, proficient in
                                     Python, Java and UI/UX design | MACP | Product T&amp;D @ OnePlus | Marketing and Coding is ♥</p>
                             </div>
                             <div>
